<resources>
    <string name="app_name">TeacherTimer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zero">00:00</string>
    <string name="nokori">残り</string>
    <string name="add_view">追加</string>
    <string name="title">指導過程</string>
    <string name="time">時間</string>
    <string name="finish">完了</string>
    <string name="remove_view">削除</string>
    <string name="cdt_fin">終了</string>
    <string name="cdt_st">開始</string>
    <string name="iine">いいね！</string>
</resources>
