<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout">

        <TextView
            android:id="@+id/nokori_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/nokori"
            android:gravity="center" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:gravity="center" />

        <Button
            android:layout_width="150dip"
            android:layout_height="100dip"
            android:text="@string/iine"
            android:id="@+id/iine_button"
            android:layout_gravity="center"
            android:layout_marginTop="70dip" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cdt_st"
            android:id="@+id/cdt_start"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cdt_fin"
            android:id="@+id/cdt_finish"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
